--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "nodemon src/infra/api/server.ts"
   },
   "dependencies": {
+    "@types/express": "^5.0.3",
     "@types/uuid": "^10.0.0",
+    "dotenv": "^17.2.2",
     "eventemitter2": "^6.4.9",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
