--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@swc/core": "^1.11.31",
     "@swc/jest": "^0.2.38",
     "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "tslint": "^5.20.1",
     "typescript": "^5.9.2"
