--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@swc/core": "^1.11.31",
     "@swc/jest": "^0.2.38",
     "@types/jest": "^29.5.14",
+    "@types/jstoxml": "^5.0.0",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
     "supertest": "^7.1.4",
@@ -22,6 +23,7 @@
     "dotenv": "^17.2.2",
     "eventemitter2": "^6.4.9",
     "express": "^5.1.0",
+    "jstoxml": "^7.0.1",
     "nodemon": "^3.1.10",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
